@startuml
title Artifact Persistence Model
skinparam linetype ortho

abstract class "Artifact" as _CLF_1782085920_ShZ_Qq_artifact {
  + artifact_id : String {id}
  + name : String
  + status : String
  + version : String
  + path : String {unique:path}
}
note right of _CLF_1782085920_ShZ_Qq_artifact
«unique path» (path)
end note

class "Entity" as _CLF_1782085920_wrZtUi_entity {
  + domain : String
  + element_class : String {optional}
}

class "Connection" as _CLF_1782085920_LEgkrJ_connection {
  + source_id : String {id}
  + target_id : String {id}
  + conn_type : String {id}
  + src_cardinality : String {optional}
  + tgt_cardinality : String {optional}
}
note right of _CLF_1782085920_LEgkrJ_connection
«identity» (source_id, conn_type, target_id)
end note

class "Diagram" as _CLF_1782085920_ntOKAT_diagram {
  + diagram_type : String
  + puml : String
  + rendered_png : String {optional}
}

class "Document" as _CLF_1782085920_5QwRvq_document {
  + doc_type : String
  + body : String
}

class "Frontmatter" as _CLF_1782085920_GKQcVR_frontmatter <<datatype>> {
  + artifact_type : String
  + keywords : String [*]
  + provenance_note : String {optional}
}

_CLF_1782085920_wrZtUi_entity --|> _CLF_1782085920_ShZ_Qq_artifact
_CLF_1782085920_LEgkrJ_connection --|> _CLF_1782085920_ShZ_Qq_artifact
_CLF_1782085920_ntOKAT_diagram --|> _CLF_1782085920_ShZ_Qq_artifact
_CLF_1782085920_5QwRvq_document --|> _CLF_1782085920_ShZ_Qq_artifact
_CLF_1782085920_ShZ_Qq_artifact *-- _CLF_1782085920_GKQcVR_frontmatter
note bottom of _CLF_1782085920_ShZ_Qq_artifact
GeneralizationSet «artifact-kind» {complete, disjoint}
end note

@enduml
